wip: new graphs by plotly

--- a/docs/polaris-python-api.mdx
+++ b/docs/polaris-python-api.mdx
@@ -1,7 +1,14 @@
+---
+title: Polaris Python API
+hide_title: true
+---
+
 import BrowserOnly from '@docusaurus/BrowserOnly';
 import ReworkDashboard from '@site/src/components/ReworkDashboard';
 
-# 📦 Polaris Python API
+<h2 style={{ fontSize: '24px', marginBottom: '10px' }}>
+  📊 Dashboard de Retrabalho - Polaris Python API
+</h2>
 
 <BrowserOnly>
   {() => <ReworkDashboard />}
