--- a/docs/polaris-python-api.mdx
+++ b/docs/polaris-python-api.mdx
@@ -1,6 +1,8 @@
 ---
 title: Polaris Python API
 hide_title: true
+sidebar_label: 🐍 Polaris Python API
+sidebar_position: 2
 ---
 
 import BrowserOnly from '@docusaurus/BrowserOnly';
@@ -11,5 +13,5 @@ import ReworkDashboard from '@site/src/components/ReworkDashboard';
 </h2>
 
 <BrowserOnly>
-  {() => <ReworkDashboard />}
+  {() => <ReworkDashboard repo="polaris-python-api"/>}
 </BrowserOnly>
