wip: deploy gitpages custom

--- a/docs/polaris-python-api.mdx
+++ b/docs/polaris-python-api.mdx
@@ -10,6 +10,6 @@ import BrowserOnly from '@docusaurus/BrowserOnly';
 <BrowserOnly fallback={<div>Carregando gráficos...</div>}>
   {() => {
     const ReworkDashboard = require('@site/src/components/ReworkGraphsWrapper').default;
-    return <ReworkGraphsWrapper repo="polaris-python-api" />;
+    return <ReworkDashboard repo="polaris-python-api" />;
   }}
 </BrowserOnly>
