--- a/docs/polaris-api-python/code-churn.mdx
+++ b/docs/polaris-api-python/code-churn.mdx
@@ -3,10 +3,13 @@ title: Code Churn
 ---
 
 import CodeChurnDashboard from '@site/src/components/CodeChurnDashboard';
+import BrowserOnly from '@docusaurus/BrowserOnly';
 
 # Code Churn – Polaris Python API
 
 Análise de modificação de código ao longo do tempo.  
 Esta métrica mostra onde o código é mais instável ou mais iterado.
 
-<CodeChurnDashboard repo="polaris-python-api" />
+<BrowserOnly>
+    {() => <CodeChurnDashboard repo="polaris-python-api" />}
+</BrowserOnly>
