--- a/docs/polaris-api-python/code-churn.mdx
+++ b/docs/polaris-api-python/code-churn.mdx
@@ -2,14 +2,11 @@
 title: Code Churn
 ---
 
-import CodeChurnDashboard from '@site/src/components/CodeChurnDashboard';
 import BrowserOnly from '@docusaurus/BrowserOnly';
 
-# Code Churn – Polaris Python API
-
-Análise de modificação de código ao longo do tempo.  
-Esta métrica mostra onde o código é mais instável ou mais iterado.
-
-<BrowserOnly>
-    {() => <CodeChurnDashboard repo="polaris-python-api" />}
+<BrowserOnly fallback={<div>Carregando gráficos...</div>}>
+  {() => {
+    const CodeChurnDashboard = require('@site/src/components/CodeChurnDashboard').default;
+    return <CodeChurnDashboard repo="polaris-python-api" />;
+  }}
 </BrowserOnly>
