feat: code churn

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -1,8 +1,9 @@
 ---
-id: rework-dashboard
+id: home
 title: Rework Rate Dashboard
+slug: /
 hide_title: true
-sidebar_label: 🧮 Rework Dashboard
+sidebar_label: 📊 Rework Dashboard
 sidebar_position: 1
 ---
 
