feat: code churn

--- a/docs/polaris-api-python/code-churn.mdx
+++ b/docs/polaris-api-python/code-churn.mdx
@@ -1,5 +1,8 @@
 ---
 title: Code Churn
+hide_title: true
+sidebar_label: Code Churn
+sidebar_position: 2
 ---
 
 import BrowserOnly from '@docusaurus/BrowserOnly';
