--- a/docs/polaris-api-python/rework-rate.mdx
+++ b/docs/polaris-api-python/rework-rate.mdx
@@ -1,7 +1,7 @@
 ---
 title: Polaris Python API
 hide_title: true
-sidebar_label: 🐍 Polaris Python API
+sidebar_label: Rework Rate
 sidebar_position: 2
 ---
 
